# pakit-storage

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .github-instructions.md  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_ISSUES_TEMPLATE.md  INTEGRATION_EVALUATION.md  INTEGRATION_QUICK_REF.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  README.md  __init__.py  api_server.py  docker-compose.yml  pakit_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  docker.yml  publish.yml  security.yml  test_ssh.yml
auth/: README.md  VIEW_ONLY_MODE.md  __init__.py  access_control.py
backends/: __init__.py  arweave_backend.py  dag_backend.py  ipfs_backend.py  local.py
blockchain/: __init__.py  bns_integration.py  contracts_integration.py  economy_integration.py  storage_proof_connector.py
cdn/: cloudflare_integration.py
core/: __init__.py  compression.py  content_addressing.py  dag_builder.py  dag_index.py  dag_storage.py  deduplication.py  storage_engine.py  zk_storage_proofs.py
docs/: DAG_DESIGN.md  INTEGRATION_GUIDE.md  MESH_NETWORKING_GUIDE.md  ML_ARCHITECTURE.md  ML_DEPLOYMENT_GUIDE.md  ML_TRAINING_GUIDE.md  P2P_PROTOCOL.md  ZK_PROOFS_GUIDE.md
infra/k8s/: pakit-storage.yaml  redis.yaml
logs/: README.md
ml/: __init__.py  base_model.py  checkpoint.py  registry.py
ml/integration/: __init__.py  ab_test.py  dag_integration.py  fallback.py
ml/models/: __init__.py  compression_predictor.py  dedup_optimizer.py  network_optimizer.py  peer_selector.py  prefetch_engine.py
ml/serving/: __init__.py  model_server.py  monitor.py  version_manager.py
ml/telemetry/: __init__.py  collector.py  dataset.py  features.py  privacy.py
ml/training/: __init__.py  evaluator.py  hyperparams.py  trainer.py
p2p/: __init__.py  node.py
p2p/cli/: __init__.py  node_cli.py
p2p/dht/: __init__.py  kademlia.py
p2p/discovery/: __init__.py  block_discovery.py
p2p/gossip/: __init__.py  protocol.py
p2p/mesh/: __init__.py  lora_bridge.py  mesh_client.py  mesh_manager.py
p2p/migration/: __init__.py  job.py
p2p/network/: __init__.py  protocol.py
p2p/reputation/: __init__.py  system.py
p2p/transport/: __init__.py  tcp_transport.py
p2p/verification/: __init__.py  merkle_verify.py
pakit/: __init__.py
pakit_node/: node_key.pem
quantum/: __init__.py  quantum_compression.py  quantum_storage.py
storage/: arweave_autofund.py  gc_manager.py
tests/: __init__.py  benchmark_dag.py  test_backends.py  test_blockchain_16_pallets.py  test_integration.py  test_lora_mesh.py  test_mesh_integration.py  test_p2p_integration.py  test_pakit_core.py  test_zk_proofs.py
web_hosting/: __init__.py  dns_server.py  dns_verifier.py  hosting_service.py  ssl_manager.py  website_manager.py
