[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pakit"
version = "1.1.0"
description = "Sovereign DAG-based decentralized storage for BelizeChain with mesh networking and ZK proofs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BelizeChain Team", email = "development@belizechain.bz"}
]
keywords = ["blockchain", "storage", "dag", "p2p", "decentralized", "ipfs", "arweave", "mesh", "lora", "zk-proofs"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/BelizeChain/pakit-storage"
Documentation = "https://github.com/BelizeChain/pakit-storage/blob/main/README.md"
Repository = "https://github.com/BelizeChain/pakit-storage"
Issues = "https://github.com/BelizeChain/pakit-storage/issues"
"Main Project" = "https://github.com/BelizeChain/belizechain"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
ml = [
    "torch>=2.1.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
]
quantum = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
]
mesh = [
    "nawal-ai[mesh]>=1.1.0",
    "meshtastic>=2.3.0",
]
zk = [
    "kinich-quantum[zk]>=1.0.0",
]
blockchain = [
    "substrate-interface>=1.8.0",
    "nawal-ai[mesh]>=1.1.0",
    "kinich-quantum[zk]>=1.0.0",
]
all = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "torch>=2.1.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.13.0",
    "nawal-ai[mesh]>=1.1.0",
    "kinich-quantum[zk]>=1.0.0",
    "meshtastic>=2.3.0",
    "substrate-interface>=1.8.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "logs*"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--color=yes",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "p2p: marks tests as P2P network tests",
    "asyncio: marks tests as async tests",
    "benchmark: marks tests as benchmark tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
    "docs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
